--- a/detailCategory.html
+++ b/detailCategory.html
@@ -67,7 +67,7 @@
                                     <button class="right-link dropdown-toggle" type="button" data-bs-toggle="dropdown"
                                         aria-expanded="false">
                                         <i class="fa fa-shopping-cart"></i>
-                                        <span class="number">0</span>
+                                        <span class="number">2</span>
                                     </button>
                                     <ul class="dropdown-menu">
                                         <div class="dropdown-title">
@@ -76,18 +76,21 @@
                                         <div class="cart-list">
                                             <div class="item">
                                                 <div class="cart-item">
-                                                    <a class="imgPd" href="#"><img src="./img/products/lap-2/de-1.jpg"
-                                                            alt=""></a>
+                                                    <a class="imgPd" id="imgPd" href="#"><img
+                                                            src="./img/products/lap-2/de-1.jpg" alt=""></a>
                                                     <div class="info-item">
-                                                        <a class="namePd" href="#">Dell Vostro 3430 - i7-1355U - 16GB -
+                                                        <a class="namePd" id="namePd" href="#">Dell Vostro 3430 -
+                                                            i7-1355U - 16GB -
                                                             512GB SSD</a>
                                                         <div class="amount">
                                                             <span>Số lượng: </span>
                                                             <input type="number" name="quantity" id="quantity" min="1"
-                                                                max="10">
+                                                                max="10" value="1">
                                                         </div>
                                                         <div class="price">
-                                                            <div class="price-new">16.990.00 <span class="vnd">đ</span>
+                                                            <div class="price-new"><span id="cartPrice">16.990.000
+                                                                </span>
+                                                                <span class="vnd">đ</span>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -95,50 +98,32 @@
                                             </div>
                                             <div class="item">
                                                 <div class="cart-item">
-                                                    <a class="imgPd" href="#"><img src="./img/products/lap-2/de-1.jpg"
+                                                    <a class="imgPd" href="#"><img src="./img/products/pc-1/de-1.jpg"
                                                             alt=""></a>
                                                     <div class="info-item">
-                                                        <a class="namePd" href="#">Dell Vostro 3430 - i7-1355U - 16GB -
-                                                            512GB SSD</a>
+                                                        <a class="namePd" href="#">LG UltraGear 27GR95QE-B.ATV - 26.5in
+                                                            OLED QHD 240Hz</a>
                                                         <div class="amount">
                                                             <span>Số lượng: </span>
                                                             <input type="number" name="quantity" id="quantity" min="1"
-                                                                max="10">
+                                                                max="10" value="1">
                                                         </div>
                                                         <div class="price">
-                                                            <div class="price-new">16.990.00 <span class="vnd">đ</span>
+                                                            <div class="price-new">22.041.000 <span class="vnd">đ</span>
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="item">
-                                                <div class="cart-item">
-                                                    <a class="imgPd" href="#"><img src="./img/products/lap-2/de-1.jpg"
-                                                            alt=""></a>
-                                                    <div class="info-item">
-                                                        <a class="namePd" href="#">Dell Vostro 3430 - i7-1355U - 16GB -
-                                                            512GB SSD</a>
-                                                        <div class="amount">
-                                                            <span>Số lượng: </span>
-                                                            <input type="number" name="quantity" id="quantity" min="1"
-                                                                max="10">
-                                                        </div>
-                                                        <div class="price">
-                                                            <div class="price-new">16.990.00 <span class="vnd">đ</span>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
+
                                         </div>
                                         <div class="cart-checkout">
                                             <div class="cart-total">
-                                                <span>Tổng tiền: </span><span class="total-money">16.990.00 <span
+                                                <span>Tổng tiền: </span><span class="total-money">39.031.000 <span
                                                         class="vnd">đ</span></span>
                                             </div>
                                             <div class="btn-pay">
-                                                <a class="btn--checkout" href="#">Thanh toán</a>
+                                                <a class="btn--checkout" href="cart.html">Giỏ hàng</a>
                                             </div>
                                         </div>
                                     </ul>
@@ -153,7 +138,33 @@
             <nav class="header__menu">
                 <div class="container">
                     <ul class="menu-list d-flex">
-                        <script src="js/category/categories.js"></script>
+                        <li class="menu-item">
+                            <a class="menu-link" href="detailCategory.html?idCate=1"><span>Màn hình PC</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href="detailCategory.html?idCate=2"><span>Máy tính xách tay</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href="detailCategory.html?idCate=3"><span>Điện thoại</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href="detailCategory.html?idCate=4"><span>Đồng hồ thông minh</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href="detailCategory.html?idCate=5"><span>Tai nghe</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href="detailCategory.html?idCate=6"><span>Máy nghe nhạc</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href="detailCategory.html?idCate=7"><span>Camera</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href="detailCategory.html?idCate=8"><span>Máy đọc sách</span></a>
+                        </li>
+                        <li class="menu-item">
+                            <a class="menu-link" href="detailCategory.html?idCate=9"><span>Phụ kiện</span></a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -165,14 +176,65 @@
             <div class="detail-navBar">
                 <ul>
                     <li><a href="index.html">Trang chủ</a></li>
-                    <li id="cate-name"></li>
+                    <li id="cate-name"><a href="detailCategory.html">Đồng hồ thông minh</a></li>
                 </ul>
             </div>
             <div class="detailCate__content">
-                <h2 class="section-text" id="name-category"></h2>
+                <h2 class="section-text" id="name-category">Đồng hồ thông minh</h2>
                 <div class="detailCate__list">
+                    <a class="detailCate__item text-decoration-none" href="detailProduct.html?idProduct=4&idCate=4">
+                        <div class="card">
+                            <img src="./img/products/watch-1/watch-1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Garmin Venu 3 - Stone White</h5>
+                                <div class="card-discount d-flex align-items-end">
+                                    <p class="card-new">12.290.000 <span class="vnd">đ</span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a class="detailCate__item text-decoration-none" href="detailProduct.html?idProduct=11&idCate=4">
+                        <div class="card">
+                            <img src="./img/products/watch-2/watch-2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Garmin Instinct Black - Tactical Edition Camo</h5>
+                                <div class="card-discount d-flex align-items-end">
+                                    <p class="card-new">9.405.000 <span class="vnd">đ</span></p>
+                                    <span class="card-sale">Sale 5%</span>
+                                </div>
+                                <p class="card-old">9.900.000 <span class="vnd">đ</span></p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a class="detailCate__item text-decoration-none" href="detailProduct.html?idProduct=20&idCate=4">
+                        <div class="card">
+                            <img src="./img/products/watch-3/watch-3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Garmin Venu SQ 2 - Metallic Mint Aluminum Bezel</h5>
+                                <div class="card-discount d-flex align-items-end">
+                                    <p class="card-new">6.490.000 <span class="vnd">đ</span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a class="detailCate__item text-decoration-none" href="detailProduct.html?idProduct=21&idCate=4">
+                        <div class="card">
+                            <img src="./img/products/watch-4/watch-4.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Garmin Approach R10</h5>
+                                <div class="card-discount d-flex align-items-end">
+                                    <p class="card-new">13.846.500 <span class="vnd">đ</span></p>
+                                    <span class="card-sale">Sale 15%</span>
+                                </div>
+                                <p class="card-old">16.290.000 <span class="vnd">đ</span></p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-                <script src="./js/category/cateProduct.js"></script>
+
             </div>
         </div>
     </section>
@@ -247,8 +309,8 @@
                 </div>
             </div>
             <div class="footer__copyright">
-                <p class="footer__lttin">&copy; Copyright 2023 Gadgets. All rights reserved | Design by
-                    <a href="#">LTTin</a>
+                <p class="footer__lttin">&copy; Copyright 2023 Gadgets. All rights reserved | Designed and built by <a
+                        href="#">Le Trung Tin</a>
                 </p>
             </div>
         </div>
